# CompressedCloud

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md  client.cpp  main.cpp  message.proto
Client/: CMakeLists.txt  clientNetwork.cpp  main.cpp
Client/Application/include/: Application.h
Client/Application/src/: Application.cpp
Client/Chunker/src/: Chunker.cpp
Client/Indexer/: CMakeLists.txt
Client/Indexer/include/: IIndexer.h  Indexer.h
Client/Indexer/src/: Indexer.cpp
Client/PatternWatcher/include/: PatternWatcher.h
Client/PatternWatcher/src/: PatternWatcher.cpp
Client/ProgramInterface/include/: IProgramInterface.h  ProgramInterface.h
Client/ProgramInterface/src/: ProgramInterface.cpp
Client/RequestCoordinator/include/: IRequestCoordinator.h  RequestCoordinator.h
Client/RequestCoordinator/src/: RequestCoordinator.cpp
Client/Tests/: client_tests.cpp
Client/Watcher/: CMakeLists.txt  main.cpp
Client/Watcher/include/: FileSysEvent.h  Watcher.h  WatcherConfig.h  WatcherMessage.h  WatcherNotification.h  WatcherNotifierBuilder.h
Client/Watcher/src/: FileSysEvent.cpp  Watcher.cpp  WatcherMessage.cpp  WatcherNotification.cpp  WatcherNotifierBuilder.cpp
Client/src/: ClientNetwork.cpp
CloudServer/: CMakeLists.txt  main.cpp
CloudServer/Server/: server.cpp
CloudServer/Server/include/: Server.h
CloudServer/include/: FileStorageServer.h
CloudServer/tests/: CMakeLists.txt  CloudServer.cpp
DataBases/LocalDB/: CMakeLists.txt
DataBases/LocalDB/include/: ChunkDB.h  DeviceDB.h  FileDB.h  IFileDB.h  IUserDB.h  LocalDB.h  UserDB.h
DataBases/LocalDB/src/: ChunkDB.cpp  DeviceDB.cpp  LocalDB.cpp  main.cpp
Server/: CMakeLists.txt  config.h
Server/ClientNetwork/: clientNetwork.cpp
Server/ClientNetwork/include/: ClientNetwork.h  IClientNetwork.h
Server/ClientNetwork/src/: ClientNetwork.cpp
Server/Message/: RequestStatus.h  message.proto
Server/Message/CodeHeader/include/: CodeHeader.h
Server/Message/CodeHeader/src/: CodeHeader.cpp
Server/ServerFileStorage/: CMakeLists.txt  main.cpp
Server/ServerFileStorage/connection/include/: connection.h
Server/ServerFileStorage/connection/src/: connection.cpp
Server/ServerFileStorage/fileStorageWorker/include/: FileStorageWorker.h
Server/ServerFileStorage/fileStorageWorker/src/: FileStorageWorker.cpp
Server/ServerFileStorage/server/include/: server.h
Server/ServerFileStorage/server/src/: server.cpp
Server/ServerSync/: client.cpp
Server/ServerSync/connection/src/: connection.cpp
Server/ServerSync/server/include/: server.h
Server/ServerSynch/: main.cpp  message.proto
Server/ServerSynch/connection/include/: connectionSynch.h
Server/ServerSynch/connection/src/: connectionSynch.cpp
Server/ServerSynch/server/include/: serverSynch.h
Server/ServerSynch/server/src/: serverSynch.cpp
SynchronizationServer/: CMakeLists.txt
SynchronizationServer/MessageQueues/include/: MessageQueues.h
SynchronizationServer/MessageQueues/src/: MessageQueues.cpp
SynchronizationServer/Server/include/: IServer.h
SynchronizationServer/Sessions/ClientNetwork/src/: ClientNetwork.cpp
SynchronizationServer/Sessions/SessionOnServer/: CMakeLists.txt
SynchronizationServer/Sessions/SessionOnServer/include/: IClientSession.h
SynchronizationServer/Synchronizator/: CMakeLists.txt
SynchronizationServer/Synchronizator/include/: Synchronizator.h
SynchronizationServer/tests/: CMakeLists.txt  SynchronizationServerTest.cpp
client/: testMessage  (+1 more)
project/Client/: CMakeLists.txt  main.cpp
project/Client/Application/: CMakeLists.txt
project/Client/Application/cmake-build/: Application  CMakeCache.txt  Makefile  cmake_install.cmake
project/Client/Application/include/: Application.h
project/Client/Application/src/: Application.cpp
project/Client/Chunker/: CMakeLists.txt
project/Client/Chunker/include/: Chunker.h
project/Client/Chunker/src/: Chunker.cpp
project/Client/CommunicateWithServer/: CMakeLists.txt
project/Client/CommunicateWithServer/include/: ClientServerCommunication.h
project/Client/CommunicateWithServer/src/: ClientServerCommunication.cpp
project/Client/Indexer/: CMakeLists.txt
project/Client/Indexer/cmake-build/: CMakeCache.txt  Indexer  Makefile  cmake_install.cmake
project/Client/Indexer/include/: Indexer.h
project/Client/Indexer/src/: Indexer.cpp
project/Client/ProgramInterface/: CMakeLists.txt
project/Client/ProgramInterface/include/: ProgramInterface.h
project/Client/ProgramInterface/src/: ProgramInterface.cpp
project/Client/Tests/: CMakeLists.txt  client_tests.cpp  main.cpp
project/Client/Watcher/: main.cpp
project/Client/Watcher/include/: FileSysEvent.h  Watcher.h  WatcherConfig.h  WatcherMessage.h  WatcherNotifierBuilder.h
project/Client/Watcher/src/: FileSysEvent.cpp  Watcher.cpp  WatcherMessage.cpp  WatcherNotification.cpp
project/DataBase/: CMakeLists.txt  FileStorage.h
project/DataBase/FileStorage/: CMakeLists.txt
project/DataBase/FileStorage/include/: FileStorage.h
project/DataBase/FileStorage/src/: FileStorage.cpp
project/DataBase/MetaDataBase/: CMakeLists.txt
project/DataBase/MetaDataBase/include/: MetaDataBase.h
project/DataBase/MetaDataBase/src/: MetaDataBase.cpp
project/DataBase/Tests/: CMakeLists.txt  database_tests.cpp
project/DataBases/: CMakeLists.txt  main.cpp
project/DataBases/DataBase/: CMakeLists.txt
project/DataBases/DataBase/cmakebuild/: CMakeCache.txt  Makefile  cmake_install.cmake
project/DataBases/DataBase/include/: Commands.h  IMetaDB.h  MetaDB.h  PostgresDB.h  UserInfoDB.h
project/DataBases/FileStorageServer/: CMakeLists.txt
project/DataBases/PostgresDB/: .main.cpp.swp  CMakeLists.txt  main.cpp
project/DataBases/Tests/: CMakeLists.txt  database_tests.cpp
project/DataBases/cmakebuild/: CMakeCache.txt
project/Network/: CMakeLists.txt
project/Network/CommunicateWithUser/: CMakeLists.txt  RequestsProcessor.h
project/Network/Syncho/: CMakeLists.txt
project/Network/Tests/: CMakeLists.txt  network_tests.cpp  tests_network.cpp
project/SynchronizationServer/Synchronizator/: CMakeLists.txt
(+124 files in other folders)
